--- a/css/main.css
+++ b/css/main.css
@@ -73,20 +73,23 @@
   background-color: #000;
 }
 
-.quickTab ul li:hover {
-  cursor: pointer;
+.quickTab ul li.active {
   background-color: #2B2A27;
 }
 
-/* RESERVATION / Calender */
+.quickTab ul li:hover {
+  cursor: pointer;
+} 
 
-.calender{
+/* RESERVATION / Calendar */
+
+.calendar{
   display: flex;
   justify-content: center;
   margin-top: 7%;
 }
 
-.calender input[type="date"]{
+.calendar input[type="date"]{
   position: relative;
   text-align: center;
   /* Add padding but 265 x 40 remains the same */
@@ -104,7 +107,7 @@
   outline: none;
 }
 
-.calender input[type="date"]::-webkit-calendar-picker-indicator{
+.calendar input[type="date"]::-webkit-calendar-picker-indicator{
   cursor: pointer;
   /* noonsokim */
   width: 40px;
