--- a/css/main.css
+++ b/css/main.css
@@ -358,3 +358,17 @@
   transform: translate(-50%, -50%);
   cursor: pointer;
 }
+
+/* WEATHER */
+.weather{
+  height: 60px;
+  background: #f4f4f4;
+  padding-top: 50px;
+  margin: 5% 0 20% 0;
+}
+
+.termperature a {
+  font-size: 16px;
+  color: black;
+}
+
