--- a/css/main.css
+++ b/css/main.css
@@ -360,15 +360,52 @@
 }
 
 /* WEATHER */
+
 .weather{
-  height: 60px;
+  position: relative;
+  display: flex;
+  height: 160px;
   background: #f4f4f4;
-  padding-top: 50px;
-  margin: 5% 0 20% 0;
+  /* 잠깐 위 아래랑 간격 */
+  margin: 3% 0 20% 0;
+  padding: 3% 15%;
+  box-sizing: border-box;  
 }
 
-.termperature a {
-  font-size: 16px;
-  color: black;
+.vl {
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  /* margin: 0 auto;  */
+  /* position: absolute; */
+  /* top: 50%; left: 50%;
+  transform: translate(-50%,-50%); */
+  width: 3px;
+  height: 90px;
+  background-color: #DBDBDB;
 }
+
+/* .temperature{
+  font-size: 50px;
+  font-weight: 900;
+  color: black;
+
+}
+
+.weather img{
+  height: 60px;
+  width: 60px;
+  margin-right: 2%;
+}
+
+.openingHours > div:first-child {
+  font-size: 25px;
+  font-weight: 600;
+  margin-bottom: 3%;
+}
+
+.openingHours > div:last-child {
+  font-size: 30px;
+  font-weight: 800;
+} */
 
