--- a/css/main.css
+++ b/css/main.css
@@ -364,47 +364,48 @@
 .weather{
   position: relative;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
   height: 160px;
+  box-sizing: border-box; 
   background: #f4f4f4;
-  /* 잠깐 위 아래랑 간격 */
-  margin: 3% 0 20% 0;
-  padding: 3% 15%;
-  box-sizing: border-box;  
+  padding: 0;
 }
 
 .vl {
-  /* display: inline-block; */
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* margin: 0 auto;  */
-  /* position: absolute; */
-  /* top: 50%; left: 50%;
-  transform: translate(-50%,-50%); */
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
   width: 3px;
   height: 90px;
   background-color: #DBDBDB;
+  /* Karma will hit me back but I only live today */
+  margin-left: 3%;
 }
 
 .temperature{
   font-size: 50px;
   font-weight: 900;
   color: black;
+  margin-right: 1%;
 }
 
 .weather img{
   height: 60px;
   width: 60px;
-  margin-right: 2%;
+  margin-right: 1%;
 }
 
 .openingHours{
-  padding-right: 10px;
+  padding-right: 20px;
 }
 
 .openingHours > div:first-child {
+  padding-bottom: 2%;
   font-size: 20px;
   font-weight: 600;
-  margin-bottom: 3%;
+  text-align: left;
 }
 
 .openingHours > div:last-child {
@@ -412,8 +413,14 @@
   font-weight: 800;
 } 
 
+.weather button{
+  background-color: white;
+  border-radius: 3px;
+  font-weight: 600;
+}
+
 .parkInfo{
-  margin-left: 10px;
+  margin: 0 1% 0 4%;
   width: 270px;
   height: 70px;
   font-size: 20px;
