--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .top-line {
   background: #000;
   padding-top: 10px;
@@ -227,17 +232,71 @@
     border: none;
 }
 
-.event {
-    height: 300px;
-    background: #eaeaea;
-    padding-top: 50px;
-    text-align: center;
-    font-size: 27px;
-    font-weight: 700;
+/* SEASON EVENT */
+
+/* text
+padding-top: 50px;
+text-align: center;
+font-size: 27px;
+font-weight: 700; */
+
+.seasonEvent {
+  width: 100%;
+  height: 550px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #eaeaea;
 }
 
-.event a:last-child {
-    color: #3b86f8;
+/* SEASON EVENT / Slider */
+.slider-container{
+  position: relative;
+  margin-top: 3%;
+  width: 930px;
+  height: 350px;
+}
+
+.slider-container .slides{
+  width: 100%;
+  height: 370px;
+  position: relative;
+  overflow: hidden;
+}
+
+.slider-container .slides img{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  object-fit: cover;
+}
+
+.slider-container .slides img:not(.active){
+  top: 0;
+  left: -100%;
+}
+
+.dotsContainer{
+  position: absolute;
+  bottom: 5px;
+  z-index: 3;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 172%;
+}
+
+.dotsContainer .dot{
+  width: 10px;
+  height: 10px;
+  margin: 0px 2px;
+  border: 3px solid rgb(161, 161, 161);
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.dotsContainer .active{
+  background-color: #555;
 }
 
 .guide {
