--- a/css/main.css
+++ b/css/main.css
@@ -250,92 +250,80 @@ font-weight: 700; */
 }
 
 /* SEASON EVENT / Slider */
-.slider-container{
+.img-slider{
   position: relative;
-  margin-top: 3%;
-  width: 930px;
-  height: 350px;
+  width: 800px;
+  height: 500px;
+  margin: 10px;
+  padding-top: 10%;
 }
-
-.slider-container .slides{
-  width: 100%;
-  height: 370px;
-  position: relative;
-  overflow: hidden;
-}
-
-.slider-container .slides img{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  object-fit: cover;
-}
-
-.slider-container .slides img:not(.active){
-  top: 0;
-  left: -100%;
-}
-
-/* will be removed later */
-span.next, span.prev{
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+.img-slider .slide{
   z-index: 1;
-}
-
-.dotsContainer{
   position: absolute;
-  bottom: 5px;
-  z-index: 3;
+  width: 100%;
+  clip-path: circle(0% at 0 150%);
+}
+.img-slider .slide.active{
+  clip-path: circle(150% at 0 50%);
+  transition: 2s;
+  transition-property: clip-path;
+}
+.img-slider .slide img{
+  z-index: 1;
+  width: 100%;
+}
+.img-slider .navigation{
+  z-index: 2;
+  position: absolute;
+  display: flex;
+  bottom: 30px;
   left: 50%;
   transform: translateX(-50%);
-  top: 150%;
 }
-
-.dotsContainer .dot{
-  width: 10px;
-  height: 10px;
-  margin: 0px 2px;
-  border: 3px solid rgb(161, 161, 161);
+.img-slider .navigation .btn{
+  background: rgba(0, 0, 0, 0.2);
+  width: 12px;
+  height: 12px;
+  margin: 10px;
   border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+  cursor: pointer;
+}
+.img-slider .navigation .btn.active{
+  background: #ea433e;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
-.dotsContainer .active{
-  background-color: #555;
-}
 
-@keyframes next1{
-  from{
-    Left: 0%
-  }to{
-    Left: -100%;
+@media (max-width: 820px){
+  .img-slider{
+    width: 600px;
+    height: 375px;
   }
-}
-@keyframes next2{
-  from{
-    Left: 100%
-  }to{
-    Left: 0%;
+  .img-slider .navigation{
+  bottom: 25px;
+  }
+  .img-slider .navigation .btn{
+    width: 10px;
+    height: 10px;
+    margin: 8px;
   }
 }
 
-@keyframes prev1{
-  from{
-    Left: 0%
-  }to{
-    Left: 100%;
+@media (max-width: 620px){
+  .img-slider{
+    width: 400px;
+    height: 250px;
+  }
+  .img-slider .navigation{
+  bottom: 15px;
+  }
+  .img-slider .navigation .btn{
+    width: 8px;
+    height: 8px;
+    margin: 6px;
   }
 }
-@keyframes prev2{
-  from{
-    Left: -100%
-  }to{
-    Left: 0%;
-  }
-}
+
 
 .guide {
     display: flex;
