--- a/css/main.css
+++ b/css/main.css
@@ -234,11 +234,12 @@
 
 /* SEASON EVENT */
 
-/* text
+/* text{
 padding-top: 50px;
 text-align: center;
 font-size: 27px;
-font-weight: 700; */
+font-weight: 700;
+} */
 
 .seasonEvent {
   width: 100%;
@@ -255,7 +256,7 @@ font-weight: 700; */
   width: 800px;
   height: 500px;
   margin: 10px;
-  padding-top: 10%;
+  padding-top: 3%;
 }
 .img-slider .slide{
   z-index: 1;
@@ -292,7 +293,6 @@ font-weight: 700; */
   background: #ea433e;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
-
 
 @media (max-width: 820px){
   .img-slider{
