--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+header {
+    background: #f9de4a;
+}
+
 .top-line {
   background: #000;
   padding-top: 10px;
@@ -13,9 +17,21 @@
   padding-right: 12px;
 }
 
+.main_logo img {
+    width: 330px;
+    height: 80px;
+    display: block; 
+    margin: 10px auto;
+}
+
+.nav_icon img {
+    width: 70px;
+    padding-right: 28px;
+}
+
 .nav-bar {
   background: #f9de4a;
-  padding: 100px 335px 20px;
+  padding: 30px 335px 20px;
   text-align: center;
 }
 
@@ -33,6 +49,18 @@
 .slider {
   height: 540px;
   background: #b22520;
+  width: 300vw;
+  transition: transform 0.5s;
+}
+
+.inner {
+    width: 50vw;
+    height: 300px;
+    float: left;
+}
+
+.inner img {
+    width: 50%;;
 }
 
 /* RESERVATION */
