--- a/css/main.css
+++ b/css/main.css
@@ -306,15 +306,16 @@ padding-bottom: 3%;
 
 .seasonEvent {
   width: 100%;
-  height: 550px;
+  height: 500px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   background: #eaeaea;
 }
 
 /* SEASON EVENT / Slider */
 .img-slider{
+  margin-top: 50px;
   position: relative;
   width: 930px;
   height: 350px;
@@ -339,6 +340,7 @@ padding-bottom: 3%;
   position: absolute;
   display: flex;
   bottom: 30px;
+  top: 100%;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -351,7 +353,7 @@ padding-bottom: 3%;
   cursor: pointer;
 }
 .img-slider .navigation .btn.active{
-  background: #ea433e;
+  background: #4A4A4A;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
