--- a/css/mb_navmenu.css
+++ b/css/mb_navmenu.css
@@ -82,8 +82,9 @@
     margin-left: 15px;
     animation-duration: 0.3s;
     font-size: 12px;
+    list-style-type: none;
   }
-  
+
   .submenu li {
     padding-bottom: 20px;
   }
@@ -92,6 +93,17 @@
     padding-bottom: 0;
   }
   
+  /* bigger bullet points */
+  .submenu li::before {
+    content: "";
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: black;
+    margin-right: 5px;
+  }
+
   @keyframes fade-in {
     from { opacity: 0; }
     to { opacity: 1; }
@@ -108,8 +120,6 @@
   
   .celsius{
     font-size: 70px;
-    /* oh no font-weight isn't working due to font style */
-    /* font-weight: 100; */
     color: black;
   }
   
