--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,6 +5,7 @@ body {
 @media screen and (max-width: 390px) {
   body{
     background: #f9d851;
+    font-family: 'Noto Sans KR', sans-serif;
   }
   .mb_main_logo img {
     float: left;
@@ -28,6 +29,10 @@ body {
     height: 70px;
     border-bottom: 2px solid black;
   }
+  
+
+  /* slider */
+
   .mb_main_slider img {
     margin: 25px auto;
     display: block;
@@ -46,3 +51,261 @@ body {
     margin-left: 18px;
     margin-top: 3px;
   }
+
+
+  /* promotion */
+
+  .promotion_title{
+    font-family: 'Jalnan';
+    font-size: 24px;
+    text-align: center;
+    display: block;
+    margin-top: 68px;
+  }
+  .promotion_detail {
+    text-align: center;
+  }
+  .promotion_detail img{
+    width: 300px;
+    margin: 30px 5px 0 10px;
+  }
+
+  .promotion_box1 {
+    box-sizing: border-box;
+		width: 280px;
+		height: 160px;
+		margin: 40px auto 0;
+		background-color: whitesmoke;
+    border: 2px solid black;
+    border-radius: 10px 10px 0 0;
+    box-shadow: 3px 3px;
+  }
+
+  .promotion_box2 {
+    box-sizing: border-box;
+		width: 280px;
+		height: 75px;
+		margin: 0 auto;
+		background-color: whitesmoke;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-radius: 0 0 10px 10px;
+    box-shadow: 3px 3px;
+    text-align: center;
+    padding-top: 20px;
+  }
+
+  .promotion_subtitle1 {
+    margin-bottom: 7px;
+    font-family: 'Jalnan';
+    font-size: 15px;
+  }
+  
+  .promotion_subtitle2 {
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 13px;
+    font-weight: 500;
+    color: #7b7b7b;
+  }
+
+  /* themepark */
+
+  .themepark1 {
+    text-align: center;
+    margin-left: 40px;
+  }
+
+  .themepark_box {
+    padding: 40px 0;
+    text-align: center;
+    float: left;
+    box-sizing: border-box;
+		width: 130px;
+		height: 160px;
+		margin: 40px 13px;
+		background-color: #7d7d7d;
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 3px 3px;
+  }
+
+  .themepark_box img {
+    margin-bottom: 10px;
+  }
+
+  .themepark_subtitle {
+    font-family: 'Jalnan';
+    font-size: 15px;
+    text-align: center;
+    font-size: 12px;
+  }
+
+  .themepark2 {
+    text-align: center;
+    margin-left: 40px;
+  }
+
+  .themepark_box2 {
+    padding: 40px 0;
+    text-align: center;
+    float: left;
+    box-sizing: border-box;
+		width: 130px;
+		height: 160px;
+		margin: 0 13px;
+    margin-bottom: 68px;
+		/* background-color: #f9d851; */
+    background-color: #7d7d7d;
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 3px 3px;
+  }
+
+  .themepark_box2 img {
+    margin-bottom: 10px;
+  }
+
+
+/* entertainment */
+
+  .entertainment_title {
+    font-family: 'Jalnan';
+    font-size: 24px;
+    text-align: center;
+    display: block;
+    margin-bottom: 30px;
+  }
+
+  .entertainment {
+    flex-direction: row;
+    margin-left: 50px;
+  }
+
+  .entertainment_box1 {
+    float: left;
+    box-sizing: border-box;
+    width: 70px;
+    height: 70px;
+    margin: 15px auto 0;
+    background-color: whitesmoke;
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
+    border-radius: 10px 0 0 10px;
+    box-shadow: 3px 3px;
+  }
+
+  .entertainment_box2 {
+    float: left;
+    box-sizing: border-box;
+    width: 220px;
+    height: 70px;
+    margin: 15px auto;
+    background-color: whitesmoke;
+    border: 2px solid black;
+    border-radius: 0 10px 10px 0;
+    box-shadow: 3px 3px;
+    padding: 20px 0 0 20px;
+  }
+
+  .entertainment_box3 {
+    float: left;
+    box-sizing: border-box;
+    width: 220px;
+    height: 70px;
+    margin: 15px 0 68px 0;
+    background-color: whitesmoke;
+    border: 2px solid black;
+    border-radius: 0 10px 10px 0;
+    box-shadow: 3px 3px;
+    padding: 20px 0 0 20px;
+  }
+
+  .entertainment_subtitle1 {
+    margin-bottom: 7px;
+    font-family: 'Jalnan';
+    font-size: 15px;
+  }
+
+  .entertainment_subtitle2 {
+    font-family: 'Jalnan';
+    font-size: 11px;
+    font-weight: 500;
+    color: #000000;
+  }
+
+
+  /* sns */
+
+  .sns_title {
+    font-family: 'Jalnan';
+    font-size: 24px;
+    text-align: center;
+    display: block;
+  }
+
+  .sns_box {
+    box-sizing: border-box;
+		width: 280px;
+		height: 270px;
+		margin: 40px auto 0;
+		background-color: whitesmoke;
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 3px 3px;
+  }
+
+  .sns_subtitle {
+    margin: 30px 0 20px 30px;
+    font-family: 'Jalnan';
+    font-size: 15px;
+  }
+
+  .sns_img {
+    background-color: #7d7d7d;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    width: 220px;
+    height: 150px;
+    border-radius: 10px;
+    border: 2px solid black;
+  }
+
+  .sns_comment {
+    font-family: 'Jalnan';
+    font-size: 12px;
+    margin-left: 30px;
+  }
+
+
+/* footer */
+
+  .footer_box {
+    margin-top: 80px;
+    padding-bottom: 5px;
+    background-color: #333333;
+  }
+  .footer {
+    background-color: #333333;
+    color: #9e9e9e;
+    font-weight: 400;
+    font-size: 14px;
+    text-align: center;
+    padding: 30px;
+    border-bottom: 1px solid #7d7d7d;
+  }
+  .footer_copyright{
+    background-color: #333333;
+    color: #9e9e9e;
+    font-weight: 400;
+    font-size: 11px;
+    text-align: center;
+    padding: 30px;
+  }
+  .footer_copyright img{
+    width: 70px;
+    margin: 0 0 30px 0;
+  }
+}
+  
