--- a/css/mb_attraction_detail.css
+++ b/css/mb_attraction_detail.css
@@ -11,18 +11,40 @@
     margin: 0;
   }
 
-  /* Container styles */
+
   .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .content {
     text-align: center;
-    padding: 20px;
+    margin-top: 20px;
   }
 
   /* Header styles */
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 20px;
+  .mb_main_logo img {
+    float: left;
+    margin-top: 10px;
+    margin-left: 20px;
+    width: 200px;
+    margin-right: 85px;
+  }
+  .mb_lang img {
+    float: right;
+    margin-top: 30px;
+    width: 20px;
+  }
+  .mb_hamburger_btn img {
+    float: left;
+    margin-top: 30px;
+    margin-right: 15px;
+    width: 20px;
+  }
+  .mb_top_line {
+    height: 70px;
+    border-bottom: 2px solid black;
   }
 
   /* Attraction image styles */
@@ -30,44 +52,82 @@
     width: 100%;
     max-width: 100%;
     height: auto;
-    margin-bottom: 20px;
+    border-radius: 2px;
+    border: solid 2px black;
   }
 
-  .hamburger-button button {
-    background: none;
-    border: none;
-    font-size: 24px;
-    cursor: pointer;
-  }
+/* Attraction title container styles */
+.attraction-title-container {
+  display: flex;
+  justify-content: center;
+  /* margin-bottom: 10px; */
+}
+
+/* Attraction title styles */
+.attraction-title {
+  font-size: 24px;
+  border: solid 2px black;
+  padding: 30px; /* Adjust the desired padding */
+  width: 100%;
+  height: 84px;
+  text-align: center;
+  line-height: 1; /* Adjust the line height */
+}
   
-  /* Attraction title styles */
-  .attraction-title {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
+/* Attraction info styles */
+.attraction-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 20px auto;
+  text-align: center;
+}
+
+/* Attraction info styles */
+.attraction-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 20px auto;
+  text-align: center;
+}
+
+/* Attraction info item styles */
+.attraction-info-item {
+  margin-bottom: 10px;
+}
+
+.attraction-info-item span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5px;
+}
+
+.attraction-info-item span img {
+  margin-right: 5px;
+}
+
+/* Attraction restriction styles */
+.attraction-restriction {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  text-align: center;
+}
+
+/* Add additional spacing on top and bottom */
+.container {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
   
-  /* Attraction restriction styles */
-  .attraction-restriction {
-    margin-bottom: 10px;
-  }
-  
-  /* Restriction icon styles */
-  .restriction-icon {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    background-color: red;
-    color: white;
-    text-align: center;
-    line-height: 30px;
-    margin-right: 5px;
-    border-radius: 50%;
-  }
-  
-  /* Dotted line styles */
-  .dotted-line {
-    border-top: 3px dotted #000000;
+  /* Dashed line styles */
+  .dashed-line {
+    border-top: 3px dashed #000000;
     margin: 20px 0;
   }
   
@@ -77,15 +137,54 @@
     margin-bottom: 20px;
   }
   
-  /* Icon styles */
-  .icon {
-    display: inline-block;
-    margin-right: 5px;
-  }
-  
-  /* Bottom section styles */
-  .bottom-section {
-    text-align: center;
-    margin-top: 20px;
-  }
+/* Clock icon and hours section styles */
+.icon.hours {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.icon.hours img {
+  margin-right: 5px;
+}
+
+.hours-title {
+  font-weight: bold;
+}
+
+.hours-list {
+  list-style: none;
+  margin-top: 10px;
+  padding: 0;
+  text-align: center; /* Center the list items */
+}
+
+.hours-list li {
+  margin-bottom: 5px;
+}
+
+/* Location icon and location section styles */
+.icon.location {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.icon.location img {
+  margin-right: 5px;
+}
+
+.location-title {
+  font-weight: bold;
+}
+
+.location-name {
+  text-align: center;
+}
 }
