--- a/css/mobile.css
+++ b/css/mobile.css
@@ -287,7 +287,7 @@ body {
     background-color: #333333;
   }
   .footer {
-    background-color: #333333;
+    background-color: #3b3b3b;
     color: #9e9e9e;
     font-weight: 400;
     font-size: 14px;
@@ -308,4 +308,5 @@ body {
     margin: 0 0 30px 0;
   }
 }
+
   
