--- a/css/mb_attraction_detail.css
+++ b/css/mb_attraction_detail.css
@@ -11,7 +11,6 @@
     margin: 0;
   }
 
-
   .container {
     display: flex;
     flex-direction: column;
@@ -51,27 +50,24 @@
   .attraction-image {
     width: 100%;
     max-width: 100%;
-    height: auto;
-    border-radius: 2px;
-    border: solid 2px black;
   }
 
 /* Attraction title container styles */
 .attraction-title-container {
   display: flex;
   justify-content: center;
-  /* margin-bottom: 10px; */
 }
 
 /* Attraction title styles */
 .attraction-title {
   font-size: 24px;
-  border: solid 2px black;
-  padding: 30px; /* Adjust the desired padding */
+  border-bottom: solid 2px black;
+  border-top: solid 2px black;
+  padding: 30px;
   width: 100%;
   height: 84px;
   text-align: center;
-  line-height: 1; /* Adjust the line height */
+  line-height: 1; 
 }
   
 /* Attraction info styles */
