--- a/css/mb_bricktopia.css
+++ b/css/mb_bricktopia.css
@@ -29,7 +29,6 @@ body {
     background-color:  #7D7D7D;
     height: 70px;
   }
-  
 
   .main {
       background-color: #7D7D7D;
@@ -149,7 +148,7 @@ body {
     cursor: pointer;
   }
   .range input::-moz-range-progress{
-    background: #f9d851; //this progress background is only shown on Firefox
+    background: #f9d851; 
   }
 
 .content {
