--- a/css/mb_navmenu.css
+++ b/css/mb_navmenu.css
@@ -4,7 +4,13 @@
     background-color: #F8D950;
     margin-left: 30px;
     margin-right: 30px;
+    /* transition: transform 0.3s ease;
+    transform-origin: left center; */
   }
+
+  /* .navmenu-open {
+    transform: translateX(100%);
+  } */
 
   .top-bar {
     display: flex;
@@ -136,7 +142,7 @@
     margin-top: 40px;
   }
   .sns-icon img {
-    width: 80px;
+    width: 120px;
     margin: 10px 5px;
   }
 }
