--- a/css/mb_attraction_detail.css
+++ b/css/mb_attraction_detail.css
@@ -23,13 +23,7 @@
   }
 
   /* Header styles */
-  .mb_main_logo img {
-    float: left;
-    margin-top: 10px;
-    margin-left: 20px;
-    width: 200px;
-    margin-right: 85px;
-  }
+
   .mb_lang img {
     float: right;
     margin-top: 30px;
@@ -42,8 +36,14 @@
     width: 20px;
   }
   .mb_top_line {
-    height: 70px;
+    height: 72px;
     border-bottom: 2px solid black;
+  }
+
+  i {
+    font-size: 25px;
+    margin: 27px 263px 0 20px;
+    float: left;
   }
 
   /* Attraction image styles */
