--- a/css/mb_bricktopia.css
+++ b/css/mb_bricktopia.css
@@ -7,13 +7,6 @@ body {
     background: #f9d851;
     font-family: 'Jalnan';
   }
-  .mb_main_logo img {
-    float: left;
-    margin-top: 10px;
-    margin-left: 20px;
-    width: 200px;
-    margin-right: 85px;
-  }
   .mb_lang img {
     float: right;
     margin-top: 30px;
@@ -28,6 +21,12 @@ body {
   .mb_top_line {
     background-color:  #7D7D7D;
     height: 70px;
+  }
+
+  i {
+    font-size: 25px;
+    margin: 27px 263px 0 20px;
+    float: left;
   }
 
 
