--- a/css/mb_themepark.css
+++ b/css/mb_themepark.css
@@ -7,21 +7,14 @@ body {
       background: #f9d851;
       font-family: 'Jalnan';
     }
-    .mb_main_logo img {
-      float: left;
-      margin-top: 10px;
-      margin-left: 20px;
-      width: 200px;
-      margin-right: 85px;
-    }
     .mb_lang img {
       float: right;
-      margin-top: 30px;
+      margin-top: 28px;
       width: 20px;
     }
     .mb_hamburger_btn img {
       float: left;
-      margin-top: 30px;
+      margin-top: 28px;
       margin-right: 15px;
       width: 20px;
     }
@@ -31,6 +24,11 @@ body {
       border-top: 2px solid black;
       border-left: 2px solid black;
       border-right: 2px solid black;
+    }
+    i {
+      font-size: 25px;
+      margin: 25px 263px 0 18px;
+      float: left;
     }
     
   
