--- a/css/mb_navmenu.css
+++ b/css/mb_navmenu.css
@@ -4,48 +4,26 @@
     background-color: #F8D950;
     margin-left: 10%;
     margin-right: 15%;
-    /* transition: transform 0.3s ease;
-    transform-origin: left center; */
   }
-
-  /* .navmenu-open {
-    transform: translateX(100%);
-  } */
 
   a, a:hover, a:focus, a:active {
     text-decoration: none;
     color: inherit;
 }
 
-  .top-bar {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin-bottom: 10px;
+  .mb_top_line img {
+    margin-top: 20px;
+    width: 20px;
+    cursor: pointer;
+    margin-right: 20px;
   }
 
-  .language-button,
-  .close-button {
-    font-size: 16px;
-    padding: 5px;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
+  .mb_top_line {
     display: flex;
-    align-items: center;
-  }
-  
-  .language-button i {
-    margin-right: 3px;
+    justify-content: end;
+    height: 70px;
   }
 
-  .close-button {
-    font-size: 25px;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-  }
-  
   .search-bar {
     display: flex;
     align-items: center;
@@ -164,11 +142,12 @@
 }
 
 .navmenu-container {
-  position: fixed;
+  position: absolute;
   top: 0;
-  height: 100vh;
-  z-index: 999;
-  transition: right 1.0s ease; 
+  left: 10%;
+  right: 0;
+  /* transition: 0.1s; */
+  transition: all .5s ease-out;
 }
 
 @media screen and (min-width: 390px) {
