--- a/css/mb_attraction_detail.css
+++ b/css/mb_attraction_detail.css
@@ -190,5 +190,35 @@
 
   .location-name {
   text-align: center;
+  margin-bottom: 10%;
   }
+  }
+
+  .footer_box {
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+    padding-bottom: 5px;
+    background-color: #333333;
+  }
+  .footer {
+    background-color: #3b3b3b;
+    color: #9e9e9e;
+    font-weight: 400;
+    font-size: 14px;
+    text-align: center;
+    padding: 30px;
+    border-bottom: 1px solid #7d7d7d;
+  }
+  .footer_copyright{
+    background-color: #333333;
+    color: #9e9e9e;
+    font-weight: 400;
+    font-size: 11px;
+    text-align: center;
+    padding: 30px;
+  }
+  .footer_copyright img{
+    width: 70px;
+    margin: 0 0 30px 0;
   }
