--- a/css/mb_navmenu.css
+++ b/css/mb_navmenu.css
@@ -1,3 +1,7 @@
+body {
+  background: #f9d851;
+}
+
 @media screen and (max-width: 389px) and (max-height: 816px) {
   body {
     font-family: 'JalnanOTF', sans-serif;
@@ -151,8 +155,9 @@
 }
 
 @media screen and (min-width: 390px) {
+  .navmenu-container,
   .menu,
-  .sns-icons {
+  .sns-icon {
     display: none;
   }
 }
