--- a/css/mb_navmenu.css
+++ b/css/mb_navmenu.css
@@ -152,9 +152,10 @@ body {
   right: 0;
   /* transition: 0.1s; */
   transition: all .5s ease-out;
+  /* transition: all .5s ease-in; */
 }
 
-@media screen and (min-width: 390px) {
+@media screen and (min-width: 391px) {
   .navmenu-container,
   .menu,
   .sns-icon {
