--- a/css/mobile.css
+++ b/css/mobile.css
@@ -43,6 +43,34 @@ body {
     display: block;
     width: 310px;
   }
+
+  .main_btn1 {
+    float: left;
+    background: none;
+    border: none;
+    margin-top: -190px;
+}
+
+.main_btn1 img {
+    width: 50px;
+    opacity: 50%;
+}
+
+.main_btn1 img:hover {
+    opacity: 100%;
+}
+
+.main_btn2 {
+    margin-top: -190px;
+    float: right;
+    background: none;
+    border: none;
+}
+
+.main_btn2 img {
+    width: 50px;
+}
+
   .mb_box {
     width: 100%; 
     background-color: black;
@@ -80,10 +108,16 @@ body {
 		width: 280px;
 		height: 160px;
 		margin: 40px auto 0;
-		background-color: whitesmoke;
+		background-color: #eeeeee;
     border: 2px solid black;
     border-radius: 10px 10px 0 0;
     box-shadow: 3px 3px;
+  }
+
+  .promotion_box1 img {
+    width: 275px;
+    border-radius: 10px 10px 0 0;
+    border: none;
   }
 
   .promotion_box2 {
@@ -91,7 +125,7 @@ body {
 		width: 280px;
 		height: 75px;
 		margin: 0 auto;
-		background-color: whitesmoke;
+		background-color: #eeeeee;
     border-bottom: 2px solid black;
     border-left: 2px solid black;
     border-right: 2px solid black;
@@ -262,9 +296,15 @@ body {
   }
 
   .sns_subtitle {
-    margin: 30px 0 20px 30px;
+    margin: 35px 0 20px 30px;
     font-family: 'Jalnan';
     font-size: 15px;
+  }
+
+  .sns_subtitle img {
+    float: left;
+    margin-right: 8px;
+    width: 18px;
   }
 
   .sns_img {
@@ -277,10 +317,24 @@ body {
     border: 2px solid black;
   }
 
+  .sns_img img{
+    background-color: #7d7d7d;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    width: 220px;
+    height: 150px;
+    border-radius: 10px;
+  }
+
   .sns_comment {
     font-family: 'Jalnan';
     font-size: 12px;
     margin-left: 30px;
+  }
+
+  .sns_comment img {
+    width: 14px;
+    margin-right: 5px;
   }
 
 
