--- a/css/mb_onedayPass.css
+++ b/css/mb_onedayPass.css
@@ -1,4 +1,8 @@
-@media screen and (max-width: 389px) and (max-height: 816px) {
+body {
+  background: #f9d851;
+}
+
+@media screen and (max-width: 390px) {
   * {
     margin: 0;
     padding: 0;
@@ -140,3 +144,14 @@
       margin: 0 0 30px 0;
     }
 }
+@media screen and (min-width: 391px) {
+  .main,
+  .main_img img,
+  .mb_main_logo,
+  .mb_hamburger_btn,
+  .image-container,
+  .fa-solid,
+  .footer_box {
+    display: none;
+  }
+}  
