--- a/css/mb_themepark.css
+++ b/css/mb_themepark.css
@@ -86,4 +86,16 @@ body {
       width: 70px;
       margin: 0 0 30px 0;
     }
-  }  
+  }
+    @media screen and (min-width: 391px) {
+      .main,
+      .main_img img,
+      .mb_main_logo,
+      .mb_hamburger_btn,
+      .fa-solid,
+      #columns,
+      .footer_box {
+        display: none;
+      }
+    }
+  
