--- a/css/mb_bricktopia.css
+++ b/css/mb_bricktopia.css
@@ -11,6 +11,9 @@ body {
     text-decoration: none;
     color: inherit;
   }
+  #screen-size-message {
+    display: none;
+  }
   .mb_lang img {
     float: right;
     margin-top: 30px;
@@ -226,4 +229,11 @@ body {
     .footer_box {
       display: none;
     }
-  }  
+    #screen-size-message {
+      display: block;
+      text-align: center;
+      font-size: 18px;
+      color: #FF5252;
+      margin-top: 20px;
+    }
+  }
