--- a/css/mb_navmenu.css
+++ b/css/mb_navmenu.css
@@ -15,6 +15,10 @@ body {
     color: inherit;
 }
 
+#screen-size-message {
+  display: none;
+}
+
   .mb_top_line img {
     margin-top: 20px;
     width: 20px;
@@ -150,9 +154,7 @@ body {
   top: 0;
   left: 10%;
   right: 0;
-  /* transition: 0.1s; */
   transition: all .5s ease-out;
-  /* transition: all .5s ease-in; */
 }
 
 @media screen and (min-width: 391px) {
@@ -160,5 +162,12 @@ body {
   .menu,
   .sns-icon {
     display: none;
+  }  
+  #screen-size-message {
+    display: block;
+    text-align: center;
+    font-size: 18px;
+    color: #FF5252;
+    margin-top: 20px;
   }
 }
