--- a/css/mb_onedayPass.css
+++ b/css/mb_onedayPass.css
@@ -15,6 +15,11 @@ body {
     margin: 0;
   }
 
+  #screen-size-message {
+    display: none;
+  }
+
+
   /* Header styles */
   
   .mb_lang img {
@@ -154,4 +159,11 @@ body {
   .footer_box {
     display: none;
   }
-}  
+  #screen-size-message {
+    display: block;
+    text-align: center;
+    font-size: 18px;
+    color: #FF5252;
+    margin-top: 20px;
+  }
+}
