--- a/css/mb_bricktopia.css
+++ b/css/mb_bricktopia.css
@@ -97,7 +97,7 @@ body {
     background: #f9d851;
     border: 3px solid black;
     z-index: -1;
-    left: 50%;
+    left: 55%;
     transform: translateX(-73%) rotate(45deg);
     border-bottom-left-radius: 50%;
     box-shadow: 0px 0px 8px rgba(0,0,0,0.1);
@@ -169,6 +169,8 @@ body {
   float: left;
   height: 123px;
   margin-right: 25px;
+  width: 105px;
+  border-right: 2px solid black;
 }
 
 .content_text {
@@ -195,6 +197,7 @@ body {
   .footer_box {
     padding-bottom: 5px;
     background-color: #333333;
+    font-family: 'Noto Sans KR', sans-serif;
   }
   .footer {
     background-color: #3b3b3b;
@@ -205,7 +208,7 @@ body {
     padding: 30px;
     border-bottom: 1px solid #7d7d7d;
   }
-  .footer_copyright{
+  .footer_copyright {
     background-color: #333333;
     color: #9e9e9e;
     font-weight: 400;
@@ -213,7 +216,7 @@ body {
     text-align: center;
     padding: 30px;
   }
-  .footer_copyright img{
+  .footer_copyright img {
     width: 70px;
     margin: 0 0 30px 0;
   }
