--- a/css/mb_main.css
+++ b/css/mb_main.css
@@ -41,18 +41,19 @@ body {
   .mb_main_slider img {
     margin: 25px auto;
     display: block;
-    width: 310px;
+    width: 270px;
   }
 
   .main_btn1 {
     float: left;
     background: none;
     border: none;
-    margin-top: -190px;
+    margin-top: -165px;
 }
 
 .main_btn1 img {
-    width: 50px;
+    margin-left: 5px;
+    width: 42px;
     opacity: 50%;
 }
 
@@ -61,14 +62,14 @@ body {
 }
 
 .main_btn2 {
-    margin-top: -190px;
+    margin: -165px 5px 0 0;
     float: right;
     background: none;
     border: none;
 }
 
 .main_btn2 img {
-    width: 50px;
+    width: 42px;
 }
 
   .mb_box {
@@ -108,14 +109,15 @@ body {
 		width: 280px;
 		height: 160px;
 		margin: 40px auto 0;
-		background-color: #eeeeee;
+		background-color: white;
     border: 2px solid black;
     border-radius: 10px 10px 0 0;
     box-shadow: 3px 3px;
   }
 
   .promotion_box1 img {
-    width: 275px;
+    width: 285px;
+    margin-top: 10px;
     border-radius: 10px 10px 0 0;
     border: none;
   }
@@ -125,7 +127,7 @@ body {
 		width: 280px;
 		height: 75px;
 		margin: 0 auto;
-		background-color: #eeeeee;
+		background-color: white;
     border-bottom: 2px solid black;
     border-left: 2px solid black;
     border-right: 2px solid black;
@@ -163,7 +165,7 @@ body {
 		width: 130px;
 		height: 160px;
 		margin: 40px 13px;
-		background-color: #7d7d7d;
+		background-color: white;
     border: 2px solid black;
     border-radius: 10px;
     box-shadow: 3px 3px;
@@ -195,7 +197,7 @@ body {
 		margin: 0 13px;
     margin-bottom: 68px;
 		/* background-color: #f9d851; */
-    background-color: #7d7d7d;
+    background-color: white;
     border: 2px solid black;
     border-radius: 10px;
     box-shadow: 3px 3px;
@@ -223,16 +225,22 @@ body {
 
   .entertainment_box1 {
     float: left;
+    text-align: center;
     box-sizing: border-box;
     width: 70px;
     height: 70px;
     margin: 15px auto 0;
-    background-color: whitesmoke;
+    background-color: white;
     border-top: 2px solid black;
     border-left: 2px solid black;
     border-bottom: 2px solid black;
     border-radius: 10px 0 0 10px;
     box-shadow: 3px 3px;
+  }
+
+  .entertainment_box1 img {
+    height: 40px;
+    margin-top: 10px;
   }
 
   .entertainment_box2 {
@@ -241,7 +249,7 @@ body {
     width: 220px;
     height: 70px;
     margin: 15px auto;
-    background-color: whitesmoke;
+    background-color: white;
     border: 2px solid black;
     border-radius: 0 10px 10px 0;
     box-shadow: 3px 3px;
@@ -254,7 +262,7 @@ body {
     width: 220px;
     height: 70px;
     margin: 15px 0 68px 0;
-    background-color: whitesmoke;
+    background-color: white;
     border: 2px solid black;
     border-radius: 0 10px 10px 0;
     box-shadow: 3px 3px;
@@ -289,14 +297,14 @@ body {
 		width: 280px;
 		height: 270px;
 		margin: 40px auto 0;
-		background-color: whitesmoke;
+		background-color: white;
     border: 2px solid black;
     border-radius: 10px;
     box-shadow: 3px 3px;
   }
 
   .sns_subtitle {
-    margin: 35px 0 20px 30px;
+    margin: 28px 0 20px 30px;
     font-family: 'Jalnan';
     font-size: 15px;
   }
@@ -314,10 +322,10 @@ body {
     width: 220px;
     height: 150px;
     border-radius: 10px;
-    border: 2px solid black;
   }
 
   .sns_img img{
+    border: 2px solid black;
     background-color: #7d7d7d;
     margin: 0 auto;
     margin-bottom: 10px;
