--- a/css/mb_themepark.css
+++ b/css/mb_themepark.css
@@ -65,8 +65,9 @@ body {
       border-left: 2px solid black;
       border-right: 2px solid black;
       border-bottom: 2px solid black;
-      padding-bottom: 5px;
+      padding-bottom: 3px;
       background-color: #333333;
+      font-family: 'Noto Sans KR', sans-serif;
     }
     .footer {
       background-color: #3b3b3b;
