--- a/css/mb_navmenu.css
+++ b/css/mb_navmenu.css
@@ -2,7 +2,7 @@ body {
   background: #f9d851;
 }
 
-@media screen and (max-width: 390px) and (max-height: 816px) {
+@media screen and (max-width: 390px) {
   body {
     font-family: 'JalnanOTF', sans-serif;
     background-color: #F8D950;
