--- a/css/mb_navmenu.css
+++ b/css/mb_navmenu.css
@@ -3,7 +3,7 @@ body {
 }
 
 @media screen and (max-width: 390px) {
-  body {
+  .navmenu-page-container {
     font-family: 'JalnanOTF', sans-serif;
     background-color: #F8D950;
     margin-left: 10%;
@@ -15,18 +15,25 @@ body {
     color: inherit;
 }
 
-#screen-size-message {
-  display: none;
-}
+  #screen-size-message {
+    display: none;
+  }
 
-  .mb_top_line img {
+  .nav_top_line img {
     margin-top: 20px;
     width: 20px;
     cursor: pointer;
     margin-right: 20px;
   }
 
-  .mb_top_line {
+  .nav_top_line img {
+    margin-top: 20px;
+    width: 20px;
+    cursor: pointer;
+    margin-right: 20px;
+  }
+
+  .nav_top_line {
     display: flex;
     justify-content: end;
     height: 70px;
