Updated search feature

--- a/css/mb_navmenu.css
+++ b/css/mb_navmenu.css
@@ -9,7 +9,7 @@ body {
     margin-left: 10%;
     margin-right: 15%;
   }
-
+  
   a, a:hover, a:focus, a:active {
     text-decoration: none;
     color: inherit;
@@ -53,7 +53,25 @@ body {
   .search-text {
     font-size: 17px;
   }
+
+  #searchInput {
+    font-family: 'JalnanOTF', sans-serif;
+    border: none;
+    background-color: #f9d851;
+    outline: none;
+    padding: 0;
+    line-height: 40px;
+    width: 150px;
+  }
+
+  #searchInput::placeholder {
+    color: black;
+  }
   
+  #searchInput:focus {
+    outline: none;
+  }
+
   .menu-item {
     display: block;
     width: 280px;
@@ -61,6 +79,7 @@ body {
     padding: 10px 0;
     position: relative;
     font-size: 20px;
+    cursor: pointer;
   }
 
   /* selects all elements with menu-item but excludes the Search bar */
