--- a/css/mb_main.css
+++ b/css/mb_main.css
@@ -15,10 +15,10 @@ body {
 
   .mb_main_logo img {
     float: left;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-left: 20px;
-    width: 200px;
-    margin-right: 85px;
+    width: 78px;
+    margin-right: 207px;
   }
   .mb_lang img {
     float: right;
@@ -106,17 +106,18 @@ body {
 
   .promotion_box1 {
     box-sizing: border-box;
-		width: 280px;
-		height: 160px;
+		width: 250px;
+		height: 180px;
 		margin: 40px auto 0;
 		background-color: white;
     border: 2px solid black;
     border-radius: 10px 10px 0 0;
     box-shadow: 3px 3px;
+    text-align: center;
   }
 
   .promotion_box1 img {
-    width: 285px;
+    width: 180px;
     margin-top: 10px;
     border-radius: 10px 10px 0 0;
     border: none;
@@ -124,7 +125,7 @@ body {
 
   .promotion_box2 {
     box-sizing: border-box;
-		width: 280px;
+		width: 250px;
 		height: 75px;
 		margin: 0 auto;
 		background-color: white;
@@ -154,16 +155,16 @@ body {
 
   .themepark1 {
     text-align: center;
-    margin-left: 40px;
+    margin-left: 53px;
   }
 
   .themepark_box {
-    padding: 40px 0;
+    padding: 20px 0;
     text-align: center;
     float: left;
     box-sizing: border-box;
-		width: 130px;
-		height: 160px;
+		width: 115px;
+		height: 140px;
 		margin: 40px 13px;
 		background-color: white;
     border: 2px solid black;
@@ -172,7 +173,9 @@ body {
   }
 
   .themepark_box img {
+    margin-top: 5px;
     margin-bottom: 10px;
+    width: 60px;
   }
 
   .themepark_subtitle {
@@ -184,16 +187,16 @@ body {
 
   .themepark2 {
     text-align: center;
-    margin-left: 40px;
+    margin-left: 53px;
   }
 
   .themepark_box2 {
-    padding: 40px 0;
+    padding: 20px 0;
     text-align: center;
     float: left;
     box-sizing: border-box;
-		width: 130px;
-		height: 160px;
+		width: 115px;
+		height: 140px;
 		margin: 0 13px;
     margin-bottom: 68px;
 		/* background-color: #f9d851; */
@@ -204,7 +207,9 @@ body {
   }
 
   .themepark_box2 img {
+    margin-top: 5px;
     margin-bottom: 10px;
+    width: 60px;
   }
 
 
@@ -239,8 +244,9 @@ body {
   }
 
   .entertainment_box1 img {
+    width: 45px;
     height: 40px;
-    margin-top: 10px;
+    margin: 13px 0 0 3px;
   }
 
   .entertainment_box2 {
