--- a/css/mb_attraction_detail.css
+++ b/css/mb_attraction_detail.css
@@ -29,24 +29,57 @@ body {
   #screen-size-message {
     display: none;
   }
+  .navmenu-page-container {
+    display: none;
+  }
+
+  .show-navmenu {
+    display: block;
+  }
+
+  /* Hide the main content when the navigation menu is shown */
+  .show-navmenu ~ #main-page-container {
+    display: none;
+  }
 
   /* Header styles */
 
-  .mb_lang img {
-    float: right;
-    margin-top: 30px;
-    width: 20px;
+  .navmenu-page-container {
+    display: none;
   }
-  .mb_hamburger_btn img {
-    float: left;
-    margin-top: 30px;
-    margin-right: 15px;
-    width: 20px;
+
+  .show-navmenu {
+    display: block;
   }
-  .mb_top_line {
-    height: 72px;
-    border-bottom: 2px solid black;
+
+  /* Hide the main content when the navigation menu is shown */
+  .show-navmenu ~ #main-page-container {
+    display: none;
   }
+
+  .mb_main_logo img {
+float: left;
+margin-top: 10px;
+margin-left: 20px;
+width: 200px;
+margin-right: 85px;
+}
+
+.mb_lang img {
+float: right;
+margin-top: 30px;
+width: 20px;
+}
+.mb_hamburger_btn img {
+float: left;
+margin-top: 30px;
+margin-right: 15px;
+width: 20px;
+}
+.mb_top_line {
+height: 70px;
+border-bottom: 2px solid black;
+}
 
   i {
     font-size: 25px;
