--- a/css/mb_bricktopia.css
+++ b/css/mb_bricktopia.css
@@ -14,17 +14,53 @@ body {
   #screen-size-message {
     display: none;
   }
-  .mb_lang img {
-    float: right;
-    margin-top: 30px;
-    width: 20px;
+  .navmenu-page-container {
+    display: none;
   }
-  .mb_hamburger_btn img {
-    float: left;
-    margin-top: 30px;
-    margin-right: 15px;
-    width: 20px;
+
+  .show-navmenu {
+    display: block;
   }
+
+  /* Hide the main content when the navigation menu is shown */
+  .show-navmenu ~ #main-page-container {
+    display: none;
+  }
+
+  /* Header styles */
+
+  .navmenu-page-container {
+    display: none;
+  }
+
+  .show-navmenu {
+    display: block;
+  }
+
+  /* Hide the main content when the navigation menu is shown */
+  .show-navmenu ~ #main-page-container {
+    display: none;
+  }
+
+  .mb_main_logo img {
+float: left;
+margin-top: 10px;
+margin-left: 20px;
+width: 200px;
+margin-right: 85px;
+}
+
+.mb_lang img {
+float: right;
+margin-top: 30px;
+width: 20px;
+}
+.mb_hamburger_btn img {
+float: left;
+margin-top: 30px;
+margin-right: 15px;
+width: 20px;
+}
   .mb_top_line {
     background-color:  #7D7D7D;
     height: 70px;
@@ -86,7 +122,7 @@ body {
     transform-origin: bottom;
     transition: transform 0.3s ease-in-out;
   }
-  .sliderValue span.show{
+  .sliderValue span.display{
     transform: translateX(-70%) scale(1);
   }
   .sliderValue span:after{
