--- a/css/mb_bricktopia.css
+++ b/css/mb_bricktopia.css
@@ -42,25 +42,40 @@ body {
     display: none;
   }
 
-  .mb_main_logo img {
-float: left;
-margin-top: 10px;
-margin-left: 20px;
-width: 200px;
-margin-right: 85px;
-}
+  .menu-item {
+    display: flex;
+    align-items: center;
+  }
+  
+  /* Add margin to create some space between the icon and the input */
+  .material-icons {
+    margin-right: 5px;
+  }
+  
+  /* Adjust the flex properties of the search text to stay on the same row */
+  .search-text {
+    margin-top: 18px;
+  }
 
-.mb_lang img {
-float: right;
-margin-top: 30px;
-width: 20px;
-}
-.mb_hamburger_btn img {
-float: left;
-margin-top: 30px;
-margin-right: 15px;
-width: 20px;
-}
+    .mb_main_logo img {
+  float: left;
+  margin-top: 10px;
+  margin-left: 20px;
+  width: 200px;
+  margin-right: 85px;
+  }
+
+  .mb_lang img {
+  float: right;
+  margin-top: 30px;
+  width: 20px;
+  }
+  .mb_hamburger_btn img {
+  float: left;
+  margin-top: 30px;
+  margin-right: 15px;
+  width: 20px;
+  }
   .mb_top_line {
     background-color:  #7D7D7D;
     height: 70px;
