--- a/css/mb_themepark.css
+++ b/css/mb_themepark.css
@@ -28,7 +28,23 @@ body {
       display: none;
     }
 
-      .mb_main_logo img {
+  .menu-item {
+    display: flex;
+    align-items: center;
+  }
+  
+  /* Add margin to create some space between the icon and the input */
+  .material-icons {
+    margin-right: 5px;
+  }
+  
+  /* Adjust the flex properties of the search text to stay on the same row */
+  .search-text {
+    margin-top: 18px;
+  }
+
+
+  .mb_main_logo img {
     float: left;
     margin-top: 10px;
     margin-left: 20px;
