--- a/css/mb_attraction_detail.css
+++ b/css/mb_attraction_detail.css
@@ -272,6 +272,7 @@ body {
   .main_img img,
   .mb_main_logo,
   .mb_hamburger_btn,
+  .nav_top_line img,
   .fa-solid,
   .attraction-image,
   .attraction-title,
