--- a/css/mb_bricktopia.css
+++ b/css/mb_bricktopia.css
@@ -277,6 +277,7 @@ body {
     .main_img img,
     .mb_main_logo,
     .mb_hamburger_btn,
+    .nav_top_line img,
     .fa-solid,
     .content,
     .range,
