--- a/css/mb_themepark.css
+++ b/css/mb_themepark.css
@@ -132,6 +132,7 @@ body {
       .main_img img,
       .mb_main_logo,
       .mb_hamburger_btn,
+      .nav_top_line img,
       .fa-solid,
       #columns,
       .footer_box {
